# multi_agent_path_planning

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  visualize.py
benchmark/32x32_obst204/: map_32by32_obst204_agents100_ex0.yaml  map_32by32_obst204_agents100_ex1.yaml  map_32by32_obst204_agents100_ex10.yaml  map_32by32_obst204_agents100_ex14.yaml  map_32by32_obst204_agents100_ex18.yaml  map_32by32_obst204_agents100_ex19.yaml  map_32by32_obst204_agents100_ex2.yaml  map_32by32_obst204_agents100_ex20.yaml  map_32by32_obst204_agents100_ex21.yaml  map_32by32_obst204_agents100_ex23.yaml  map_32by32_obst204_agents100_ex24.yaml  map_32by32_obst204_agents100_ex27.yaml  map_32by32_obst204_agents100_ex29.yaml  map_32by32_obst204_agents100_ex3.yaml  map_32by32_obst204_agents100_ex30.yaml  map_32by32_obst204_agents100_ex33.yaml  map_32by32_obst204_agents100_ex35.yaml  map_32by32_obst204_agents100_ex37.yaml  map_32by32_obst204_agents100_ex39.yaml  map_32by32_obst204_agents100_ex40.yaml  map_32by32_obst204_agents100_ex42.yaml  map_32by32_obst204_agents100_ex43.yaml  map_32by32_obst204_agents100_ex44.yaml  map_32by32_obst204_agents100_ex45.yaml  map_32by32_obst204_agents100_ex47.yaml  (+518 more)
cbs/: a_star.py  cbs.py  input.yaml  output.yaml
centralized/: visualize.py
decentralized/: decentralized.py
scheduling/: minimize.py  real_schedule.yaml  stn.py  tpg.py
scripts/: CBS.sh  SIPP.sh  TPG.sh  decentralized.sh  lifelong_MAPF.sh  velocity_obstacles.sh
sipp/: graph_generation.py  input.yaml  multi_sipp_planner.py  output.yaml  sipp.avi  sipp.py  visualize_sipp.py
(+2499 files in other folders)
