[tool.poetry]
name = "multi-agent-path-planning"
version = "0.1.0"
description = ""
authors = ["David Russell <davidrussell327@gmail.com>"]
readme = "README.md"
packages = [{include = "multi_agent_path_planning"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
ffmpeg-python = "^0.2.0"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
